# Offline-AI-Chatbot

./: .gitignore  LFM_model_performance_comparison.csv  README.md  download_ggml_sources.ps1  model_comparison.csv  performance_32k.csv  prompt.txt  report.csv  report.ipynb  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/localaiindia/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni_wrapper.cpp  llama_wrapper.cpp  llama_wrapper.h  native-lib.cpp
app/src/main/java/com/example/localaiindia/: LlamaService.kt  MainActivity.kt
app/src/main/java/com/example/localaiindia/benchmark/: BenchmarkData.kt  BenchmarkService.kt
app/src/main/java/com/example/localaiindia/benchmark/database/: BenchmarkDatabase.kt
app/src/main/java/com/example/localaiindia/model/: ChatMessage.kt
app/src/main/java/com/example/localaiindia/ui/components/: ChatBubble.kt  GradientBackground.kt  MessageInput.kt  TopAppBar.kt
app/src/main/java/com/example/localaiindia/ui/screens/: AnalysisTab.kt  BenchmarkScreen.kt  ChatScreen.kt  ModelComparisonTab.kt
app/src/main/java/com/example/localaiindia/ui/theme/: Color.kt  Theme.kt  ThemePreferences.kt  Type.kt
app/src/main/java/com/example/localaiindia/viewmodel/: ChatSession.kt  ChatViewModel.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/localaiindia/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
